# real_estate_toolkit

./: .gitignore  README.md  pyproject.toml
src/real_estate_toolkit/: main.py
src/real_estate_toolkit/agent_based_model/: consumers.py  houses.py  market.py  simulation.py
src/real_estate_toolkit/analytics/: exploratory.py
src/real_estate_toolkit/data/: cleaner.py  descriptor.py  descriptor_numpy.py  loader.py
src/real_estate_toolkit/ml_models/: predictor.py
src/real_estate_toolkit/ml_models/outputs/: submission.csv
tests/: run_simulation.py  test_consumer.py  test_example.py  test_house.py  test_market.py
